--- a/scripts/final_filtered_analyses.Rmd
+++ b/scripts/final_filtered_analyses.Rmd
@@ -675,6 +675,7 @@ learning_7_data <- data_time_series_antic %>%
 learning_model_7  <- glmer(mean_prop ~ language * trial_type + (1 | recording_name), data = learning_7_data, family = binomial, weights = SamplesTotal, control=glmerControl(optimizer="bobyqa", optCtrl = list(maxfun = 100000))) 
 
 summary(learning_model_7) #result is as expected (significantly worse scores at test)
+tab_model(learning_model_7) # fix these to get the results out... 
 
 # try to move the 0s a bit for the monolinguals - post-switch
 learning_7_data2 <- 
@@ -727,6 +728,7 @@ learning_model_20  <- glmer(mean_prop ~ language * trial_type + (1 | recording_n
                                                    optCtrl = list(maxfun = 100000))) 
 
 summary(learning_model_20) #result is NOT as expected (huge effect, but not significant because the standard error is even larger)
+tab_model(learning_model_20) # fix these to get the results out... 
 
 ```
 
