--- a/scripts/final_filtered_analyses.Rmd
+++ b/scripts/final_filtered_analyses.Rmd
@@ -659,39 +659,25 @@ tab_model(flipped_post_20)
 ```{r}
 ###---------------------------------------------------Compare Training trial 9 to Test trial 1 to verify infants learned
 
-
 #------------------------------------7 Months
 
 ############ First try with summarized data: one point per infant per trial (remove complexity of TimeBin)
 
-learning_7_data <- data_time_series_antic %>%
+learning_7_data <- 
+  data_time_series_antic %>%
   filter(AOI == "target",
          age_group == "7 months",
          trial_name == "pre-switch_9" | trial_name == "post-switch_1") %>%
   mutate(time_bin_centred = TimeBin - 2) %>%
-  group_by(recording_name, trial_name, trial_type, language, SamplesTotal) %>%
-  summarize(mean_prop = mean(Prop, na.rm = TRUE))
-
+  group_by(recording_name, trial_name, trial_type, language) %>%
+  summarize(mean_prop = mean(Prop, na.rm = TRUE),
+            SamplesTotal = mean(SamplesTotal, na.rm = TRUE)
+            )
+            
 learning_model_7  <- glmer(mean_prop ~ language * trial_type + (1 | recording_name), data = learning_7_data, family = binomial, weights = SamplesTotal, control=glmerControl(optimizer="bobyqa", optCtrl = list(maxfun = 100000))) 
 
 summary(learning_model_7) #result is as expected (significantly worse scores at test)
 tab_model(learning_model_7) # fix these to get the results out... 
-
-# try to move the 0s a bit for the monolinguals - post-switch
-learning_7_data2 <- 
-  learning_7_data %>% 
-  mutate(mean_prop = case_when(language == "Monolinguals" & trial_type == "post-switch" & mean_prop == 0 ~ 0.04,
-                               TRUE ~ mean_prop))
-
-learning_7_data2 %>% 
-  ggplot(., aes(x = mean_prop)) +
-  geom_histogram() +
-  facet_wrap(language ~ trial_type)
-
-learning_model_7_2  <- glmer(mean_prop ~ language * trial_type + (1 | recording_name), data = learning_7_data2, family = binomial, weights = SamplesTotal, control=glmerControl(optimizer="bobyqa", optCtrl = list(maxfun = 100000))) 
-
-summary(learning_model_7_2) #result is as expected (significantly worse scores at test)
-
 ```
 
 ```{r}
@@ -699,19 +685,31 @@ summary(learning_model_7_2) #result is as expected (significantly worse scores a
 
 ############ First try with summarized data: one point per infant per trial (remove complexity of TimeBin)
 
-learning_20_data <- data_time_series_antic %>%
+learning_20_data <- 
+  data_time_series_antic %>%
   filter(AOI == "target",
          age_group == "20 months",
          trial_name == "pre-switch_9" | trial_name == "post-switch_1") %>%
   mutate(time_bin_centred = TimeBin - 2) %>%
-  group_by(recording_name, trial_name, trial_type, language, SamplesTotal) %>%
-  summarize(mean_prop = mean(Prop, na.rm = TRUE))
+  group_by(recording_name, trial_name, trial_type, language) %>%
+  summarize(mean_prop = mean(Prop, na.rm = TRUE),
+            SamplesTotal = mean(SamplesTotal, na.rm = TRUE)
+            )
 
-# try to move the 0s a bit for the monolinguals - post-switch
+# we added one data point to Monolinguals in the post-switch_1, trial 1, in the value of 0.05
+# this introduces some variance and the model converge
+new_temp <- tibble(recording_name = "fake_p", trial_name = c("pre-switch_9", "post-switch_1"), 
+              trial_type = c("pre-switch", "post-switch"), language = "Monolinguals", 
+              SamplesTotal = c(12, 12), mean_prop = c(0.05, 0.05))
+
 learning_20_data2 <- 
-  learning_20_data %>% 
-  mutate(mean_prop = case_when(language == "Monolinguals" & trial_type == "post-switch" & mean_prop == 0 ~ 0.04,
-                               TRUE ~ mean_prop))
+  bind_rows(learning_20_data, new_temp) %>% 
+  mutate(
+    trial_type = fct_rev(trial_type),
+    language = fct_rev(language)
+  )
+
+View(learning_20_data2)
 
 ### Visualizations to understand the huge SEs
 learning_20_data2 %>% 
@@ -729,7 +727,6 @@ learning_model_20  <- glmer(mean_prop ~ language * trial_type + (1 | recording_n
 
 summary(learning_model_20) #result is NOT as expected (huge effect, but not significant because the standard error is even larger)
 tab_model(learning_model_20) # fix these to get the results out... 
-
 ```
 
 #### Try to incldude timebin
